# binance-api-client

./: README.md  pyproject.toml
src/: client.py  main.py  type.py
src/model/: open_interest.py
tests/: test_binance_api_client.py
typings/requests/: __init__.pyi  _internal_utils.pyi  adapters.pyi  api.pyi  auth.pyi  compat.pyi  cookies.pyi  exceptions.pyi  help.pyi  models.pyi  sessions.pyi  structures.pyi  utils.pyi
