[tool.poetry]
name = "binance-api-client"
version = "0.1.0"
description = ""
authors = ["YusukeSuzuki1213"]

[tool.poetry.dependencies]
python = "^3.9"
autopep8 = "^1.5.5"
flake8 = "^3.8.4"
requests = "^2.25.1"
python-dotenv = "^0.15.0"
mypy = "^0.812"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
